syntax = "proto3";

import "google/protobuf/empty.proto";


package template;

service TemplatePrt {
  rpc SaveTemplate (TemplateProtoDto) returns (SaveTemplateResponse);
  rpc GetAll(google.protobuf.Empty) returns (GetAllTemplateResponse);
}


message SavedTemplateProtoDto{
	repeated PropType PropTypes = 1;
	string Id = 2;
}

message TemplateProtoDto{
	repeated PropType PropTypes = 1;
}

message PropType{
	string TypeSelectionName =1 ;
	string ParentTypeSelectionName =2;
	string PropName = 3;
}

message SaveTemplateResponse{
	bool Result = 1;
}

message GetAllTemplateResponse{
	repeated SavedTemplateProtoDto PropTypes =1;
	bool Result = 2;
}